--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.revature</groupId>
-    <artifactId>ryan_heron_p0</artifactId>
+    <artifactId>dota2db</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
